add skeleton app html+css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Zoom App</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="debug">
+    <!-- app  -->
+    <div id="app">
+
     
+    <!-- main container/content  -->
+    <main class="app__content">
+
+    </main>
+
+    <!-- toolbar -->
+    <aside class="app__toolbar">
+
+    </aside>
+    </div>
 </body>
 </html>
