add style to action-container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <div class="action-container">
                     <i class="fa-solid fa-microphone"></i>
                    <div class="action__text">Mute</div> 
-                   <i class="fa-solid fa-chevron-up"></i>
+                   <i class="fa-solid fa-chevron-up position-right"></i>
+                   
                 </div>
             </div>
             <div class="app__toolbar__list-action">
