add button in top page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     
         <!-- main container/content  -->
         <main class="app__content">
+
+            <div class="button-list">
+                <span class="button-speaker-view">
+                    <i class="fa-solid fa-grip"></i>
+                        Speaker View
+                </span>
+                </span class="button-scale-back">
+                    <i class="fa-solid fa-arrows-up-down-left-right"></i>
+                </span>
+            </div>
+
+
+
             <div class="cam-container">
                 <!-- immagine  -->
                 <img src="./img/272-200x300.jpg">
