add color green at share screen

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 </div>
                 <!-- condivisione schermo  -->
                 <div class="action-container">
-                    <i class="fa-solid fa-share-from-square icon"></i>
-                   <div class="action__text">Share Screen</div>
+                    <i class="fa-solid fa-share-from-square icon color-green"></i>
+                   <div class="action__text ">Share Screen</div>
                 </div>
                 <div class="action-container">
                     <i class="fa-solid fa-chevron-up icon-small icon"></i>
