--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <!-- immagine  -->
                 <img src="./img/272-200x300.jpg">
               <!-- status mutato  nome utente  -->
-              <div class="status">
+              <span class="status">
                 
                 <i class="fa-solid fa-microphone-slash"></i>
                 <span class="user-name">Pinco Pallo</span>
-              </div>
+              </span>
 
             </div>
             <div class="cam-container">
